# calibr8

./: .coveragerc  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  CLA.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: cla.yml  pipeline.yml  pre-commit.yml  release.yml
calibr8/: __init__.py  core.py  optimization.py  setup.py  test_all.py  tests.py  utils.py
calibr8/calibr8/: __init__.py  core.py  optimization.py  utils.py
calibr8/contrib/: base.py  noise.py  normal.py  studentt.py
calibr8/tests/: tests.py
docs/: requirements.txt
docs/source/: 01_concepts.rst  01_example_linear.rst  01_terminology.rst  02_fitting.rst  03_features.rst  Advanced_Custom_Noise_Models.nblink  Advanced_Hierarchical_Calibration.nblink  Advanced_In-depth_Model_Fitting.nblink  Basic_ExponentialModel.nblink  calibr8_contrib_base.rst  (+12 more)
examples/: Background_AsymmetricLogistic.ipynb  Basic_GeneralisedLogistic.ipynb  Basic_GeneralizedLogistic.ipynb  Basic_LinearModel.ipynb  Example_Model Fitting.ipynb  Example_Numerical Independent Posterior.ipynb  Exercise_AbsorbanceCorrelation.ipynb  Exercise_AbsorbanceCorrelation_Solution.ipynb  SerialDilutionPlan.ipynb
notebooks/: Advanced_Custom_Noise_Models.ipynb  Advanced_Hierarchical_Calibration.ipynb  Advanced_In-depth_Model_Fitting.ipynb  Background_AsymmetricLogistic.ipynb  Basic_ExponentialModel.ipynb  Basic_GeneralizedLogistic.ipynb  Example_Fitting_a_Linear_Model.ipynb  Example_Model_Fitting.ipynb  Example_Numeric_Independent_Posterior.ipynb  README.md
(+7 files in other folders)
